--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ MYSQL_ROOT_PASSWORD=YtReWq4321
 MYSQL_DATABASE=virtd
 MYSQL_USER=app
 MYSQL_PASSWORD=QwErTy1234
+
+
+# Web application settings
+DB_HOST=db
+DB_PORT=3306
+DB_NAME=virtd
+DB_USER=app
+DB_PASSWORD=QwErTy1234
