--- a/compose.yaml
+++ b/compose.yaml
@@ -1,17 +1,12 @@
-# добавляем  proxy.yaml
-include:
-  - proxy.yaml
-
 services:
-  # инициализируем базу данных MySQL
   db:
     image: mysql:8
     container_name: mysql-db
-    env_file: .env  # говорим что  существует .env файл с параметрами
+    env_file: .env
     networks:
       backend:
-        ipv4_address: 172.20.0.10  # резервируем IP адрес для sql
-    restart: always  #  перезапуск сервиса в случае ошибок
+        ipv4_address: 172.20.0.10
+    restart: always
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
@@ -19,22 +14,44 @@ services:
       timeout: 20s
       retries: 10
 
-  # Веб-приложение FastAPI
   web:
     build:
       context: .
-      dockerfile: Dockerfile.python  # cобираем из Dockerfile.python согласно задачи
+      dockerfile: Dockerfile.python
     container_name: fastapi-app
     depends_on:
       db:
         condition: service_healthy
     networks:
       backend:
-        ipv4_address: 172.20.0.5  # задаем IP
-    restart: unless-stopped  #  перезапускаться в случае ошибок
-    env_file: .env # - пароли храним секурно, чтоб не попали в метаданные слоя докера
+        ipv4_address: 172.20.0.5
+    restart: unless-stopped
+    env_file: .env
+
+  reverse-proxy:
+    image: haproxy
+    restart: always
+    networks:
+      backend: {}
+    ports:
+      - "127.0.0.1:8080:8080"
+    volumes:
+      - ./haproxy/reverse/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:rw
+
+  ingress-proxy:
+    image: nginx:latest
+    restart: always
+    network_mode: host
+    volumes:
+      - ./nginx/ingress/default.conf:/etc/nginx/conf.d/default.conf:rw
+      - ./nginx/ingress/nginx.conf:/etc/nginx/nginx.conf:rw
 
 volumes:
   mysql_data:
 
-
+networks:
+  backend:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/24
